<resources>
    <string name="app_name">SmartCradleSystem</string>
    <string name="departments">Departments</string>
    <string name="offices">Offices</string>
    <string name="employees">Employees</string>
    <string name="choose_a_department">Choose a department:</string>
    <string name="choose_an_office">Choose an office:</string>
    <string name="company_image">Company image</string>
    <string name="mycompany">SmartCradleSystem</string>
    <string name="student_mirko_giunta">Student: Mirko Giunta</string>
    <string name="internet_of_things">Internet of Things</string>
    <string name="home">Home</string>
    <string name="sounds">Sounds</string>
    <string name="temperatures">Temperatures</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="button_4">Button 4</string>
    <string name="button_3">Button 3</string>
    <string name="button_5">Button 5</string>
    <string name="button_6">Button 6</string>
    <string name="button_7">Button 7</string>
    <string name="button_8">Button 8</string>
    <string name="history">History</string>
    <string name="humidity">Humidity</string>
    <string name="modify">Modify</string>
    <string name="saund">sans-serif-smallcaps</string>
    <string name="sound">Sound</string>
    <string name="Temperature">Temperature</string>
    <string name="humidities">Humidities</string>
    <string name="another">Another</string>
    <string name="valueSound">valueSound</string>
    <string name="room_temperatures">Room Temperatures</string>
    <string name="smart_cradle_system">Smart Cradle System</string>
    <string name="show_popup">Show Popup</string>
    <string name="one">One</string>
    <string name="two">Two</string>
    <string name="three">Three</string>
    <string name="room_temperature">Room Temperature</string>
    <string name="playlist">Playlist</string>
    <string name="space" />
    <string name="change">Change</string>
    <string name="song">Song</string>
    <string name="cradle_temperatures">Cradle Temperatures</string>
</resources>