<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:cardView="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardViewSounds"
    android:layout_width="260dp"
    android:layout_height="90dp"
    cardView:cardCornerRadius="8dp"
    cardView:cardElevation="8dp"
    android:layout_margin="8dp">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        tools:ignore="NestedWeights"
        android:baselineAligned="false">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/button1"
            android:text="@string/sounds"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@drawable/button">

            <TextView
                android:id="@+id/idSound"
                android:text="@string/sound"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:fontFamily="sans-serif-smallcaps"
                android:layout_marginTop="12dp"
                cardView:layout_constraintEnd_toEndOf="parent"
                cardView:layout_constraintRight_toRightOf="parent"
                cardView:layout_constraintStart_toStartOf="parent"
                cardView:layout_constraintTop_toTopOf="parent"
                android:lines="5"
                android:padding="0dp"
                android:textStyle="bold"
                tools:text="@tools:sample/full_names"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/black"
                android:textAlignment="textStart"
                tools:ignore="RtlCompat" />
            <ImageView
                android:id="@+id/company"
                android:src="@drawable/cradle"
                android:contentDescription="@string/company_image"
                android:scaleType="fitCenter"
                cardView:layout_constraintTop_toBottomOf="@id/idSound"
                cardView:layout_constraintRight_toLeftOf="@id/valueSound"
                android:layout_marginTop="0dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="45dp"
                android:layout_height="50dp"
                android:layout_width="50dp"/>
            <TextView
                android:id="@+id/valueSound"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:fontFamily="sans-serif-smallcaps"
                android:layout_marginLeft="112dp"
                android:layout_marginRight="12dp"
                cardView:layout_constraintTop_toBottomOf="@id/idSound"
                android:lines="5"
                android:padding="0dp"
                android:textStyle="bold"
                tools:text="@tools:sample/full_names"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@android:color/holo_blue_dark"
                android:textAlignment="textStart"
                tools:ignore="RtlCompat" />
            <TextView
                android:id="@+id/dateSound"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:fontFamily="sans-serif-smallcaps"
                android:layout_marginTop="12dp"
                android:layout_marginLeft="112dp"
                android:layout_marginRight="12dp"
                cardView:layout_constraintTop_toBottomOf="@id/valueSound"
                android:lines="5"
                android:padding="0dp"
                android:textStyle="bold"
                tools:text="@tools:sample/full_names"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@android:color/darker_gray"
                android:textAlignment="textStart"
                tools:ignore="RtlCompat" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>