<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/company"
        android:src="@drawable/baby_resize2"
        android:contentDescription="@string/company_image"
        android:scaleType="fitCenter"
        android:layout_marginTop="60dp"
        android:layout_height="70dp"
        android:layout_width="120dp"
        android:layout_gravity="center" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            tools:ignore="NestedWeights">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewMainTemperaturesRoom"
                android:layout_width="260dp"
                android:layout_height="100dp"
                android:layout_marginBottom="0dp"
                android:background="@android:color/white"
                tools:listitem="@layout/recyclerview_adapter_main_temperature_room" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:gravity="center">


                <Button
                    android:id="@+id/buttonTemperaturesRoom"
                    android:text="@string/history"
                    android:layout_width="100dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    tools:ignore="ButtonStyle" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            tools:ignore="NestedWeights">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewMainTemperatures"
                android:layout_width="260dp"
                android:layout_height="100dp"
                android:background="@android:color/white"
                app:layout_constraintTop_toBottomOf="@id/recyclerViewMainTemperaturesRoom"
                tools:listitem="@layout/recyclerview_adapter_main_temperature" />
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:gravity="center">

                <Button
                    android:id="@+id/button41"
                    android:text="@string/modify"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    tools:ignore="ButtonStyle,NestedWeights" />
                <Button
                    android:id="@+id/buttonTemperatures"
                    android:text="@string/history"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    tools:ignore="ButtonStyle" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewMainSounds"
                android:layout_width="260dp"
                android:layout_height="100dp"
                android:background="@android:color/white"
                app:layout_constraintTop_toBottomOf="@id/recyclerViewMainTemperatures"
                tools:listitem="@layout/recyclerview_adapter_main_sounds" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:gravity="center">
                <Button
                    android:id="@+id/buttonSounds"
                    android:text="@string/history"
                    android:layout_width="100dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    tools:ignore="ButtonStyle,NestedWeights" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewMainPlaylist"
                android:layout_width="260dp"
                android:layout_height="100dp"
                android:background="@android:color/white"
                app:layout_constraintTop_toBottomOf="@id/recyclerViewMainSounds"
                tools:listitem="@layout/recyclerview_adapter_main_playlist" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:gravity="center">
                <Button
                    android:id="@+id/buttonPlaylist"
                    android:text="@string/change"
                    android:layout_width="100dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    tools:ignore="ButtonStyle,NestedWeights" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>